  replaces with a dependency on **ggraph** for plotting networks as grid
  objects.

* `plot.validate_model` now shows tag counts in the sample to provide a relative
  importance of the accuracy in making decisions.

* Open, unescaped or regexes [(i.e., `|)` unescaped pipe followed by a closing
  group character] are now caught and warned for `read_term_list` and thus
  `term_count`.

CHANGES

* The **stopwords** package replaces the **tm** package for providing default
  stopword lists.  The **stopwords** package is more comprehensive and lighter
  weight.  This changes allows the removal of the **tm** package as a dependency.
  Suggested by Ken Benoit issue #69.

* `important_terms` now uses `quanteda::dfm_tfidf` rather than `tm::weightTfIdf`.
  This means the tf-idf weighting is done is base 10 log rather than base 2 as
  done with the **tm** package.  Suggested by Ken Benoit issue #69.

* `as_dtm` & `as_tdm` moved to the **gofastr** package where they can be used by
  other packages and their classed objects.  **termco** re-exports the two
  functions.

* `summary.validate_model` used to return `n` which was the number of tags from
  the `termco` object.  It now gives n.tags and n.classified to be more explicit
  about counts of potential tags and tags actually assigned by `classify`.

* `colo` no longer uses non-standard evaluation; terms must be quoted.

* `ngram_collocations` has been renamed to  `frequent_ngrams` for better clarity
  in what the function does and as a counter part to `frequent_terms`.

* `update_names` renamed to `rename_tags` to be consistent with naming
  conventions.

* `term_cols` renamed to `tag_cols` to be consistent with naming
  conventions.


termco 0.4.0 - 0.4.3
----------------------------------------------------------------

NEW FEATURES

* `term_cols` & `group_cols` added to quickly grab just term or grouping
  variable columns.

* `as_dtm` & `as_tdm` added to convert a `term_count` object into a