@@ -40,7 +40,6 @@ S3method(print,term_list)
 S3method(print,term_list_template)
 S3method(print,termco_nested)
 S3method(print,termco_unnested)
-S3method(print,token_count)
 S3method(print,validate_model)
 S3method(set_meta_tags,data.frame)
 S3method(set_meta_tags,list)
