@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/update_names.R
+% Please edit documentation in R/rename_tags.R
 \name{rename_tags}
 \alias{rename_tags}
 \title{Rename a term_count Object's Term Columns}
@@ -34,8 +34,39 @@ discoure_markers <- list(
 ))
 
 
-rename_tags(markers, old = c('back_channels', 'summons'), new = c('bcs', 's'))
+rename_tags(markers, old = c('summons', 'back_channels'), new = c('s', 'bcs'))
 rename_tags(markers, old = c('person'), new = c('people'))
 rename_tags(markers, old = c('person', 'back_channels', 'summons'), new = c('people', 'bcs', 's'))
 attributes(rename_tags(markers, old = c('back_channels', 'summons'), new = c('bcs', 's')))
+
+#' ## Token Counts
+token_list2 <- list(
+    list(
+        noun__person = c('sam', 'i')
+    ),
+    list(
+        noun__place = c('here', 'house'),
+        noun__thing = c('boat', 'fox', 'rain', 'mouse', 'box', 'eggs', 'ham')
+    ),
+    list(
+        feeling__no_like = c('not like'),
+        noun__thing = c('train', 'goat'),
+        other__other = c('in')
+    ),
+    list(
+        other__other = 'i'
+    )
+)
+
+
+x <- token_count(sam_i_am, grouping.var = TRUE, token.list = token_list2)
+
+\dontrun{
+## Strips meta tags
+x \%>\%
+    rename_tags(
+        c('noun__person', 'noun__place', 'feeling__no_like'), 
+        c('human', 'ten_20', 'dislike')
+    )
+}
 }
